--- a/projeto1/src/App.css
+++ b/projeto1/src/App.css
@@ -1,61 +1,45 @@
-body{
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+body {
+  font-family: Arial, sans-serif;
   background-color: #f4f4f4;
   padding: 30px;
   color: #333;
-  background-image: url('img/walp.avif');
-  background-position: center;
+  background-image: url("./img/walp.avif");
   background-size: cover;
+  background-position: center;
 }
 
-.app{
+.app {
   max-width: 600px;
-  margin: 0 auto 500px;
-  background-color: #efefef;
-  padding: 20px 30px;
+  margin: 0 auto;
+  padding: 0.5rem 2rem;
   border-radius: 10px;
-
+  background-color: #efefef;
 }
-h1{
+
+h1 {
   text-align: center;
 }
 
-h2{
+h2 {
   margin-bottom: 10px;
 }
 
-p{
+p {
   margin: 10px 0;
 }
 
-input{
-  box-sizing:border-box;
+input {
+  box-sizing: border-box;
 }
 
-button{
-  background-color: #333974;
-  color: #fff;
-  padding: 5px 10px;
-  border: none;
-  border-radius: 3px; 
-  cursor: pointer;
-  opacity: 0.8;
-  transition: .1s;
-  margin-right: 5px;
-}
-button:hover{
-  opacity: 1;
+.todo-list {
+  margin-bottom: 1rem;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid #555;
 }
 
-.todo.list{
-  margin-bottom: 20px;
-  padding-bottom: 20px;
-  border-bottom: 1px solid #555 ;
-  
-}
-
-.todo{
-  background-color: #fff ;
+.todo {
+  background-color: #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   padding: 10px;
   margin-bottom: 10px;
@@ -65,38 +49,63 @@ button:hover{
   align-items: center;
 }
 
-.todo-form{
-  padding-bottom: 1.5rem;
+.todo .category {
+  font-size: 0.8em;
+  color: #888;
 }
 
-input, select{
+button {
+  background-color: #333974;
+  color: #fff;
+  padding: 5px 10px;
+  border: none;
+  border-radius: 3px;
+  margin-left: 5px;
+  cursor: pointer;
+  opacity: 0.8;
+  transition: 0.3s;
+}
+
+button:hover {
+  opacity: 1;
+}
+
+button.complete {
+  background-color: #5cb85c;
+  color: #fff;
+}
+
+button.remove {
+  background-color: #d9534f;
+  color: #fff;
+}
+
+input[type="text"],
+select {
   padding: 5px;
   margin-bottom: 10px;
   border: 1px solid #ddd;
   border-radius: 3px;
   width: 100%;
 }
-.complete{
-  background-color: #5cb85c;
 
+.todo-form {
+  padding-bottom: 1.5rem;
 }
 
-.remove{
-  background-color: #d9534f;
+.filter,
+.search {
+  border-bottom: 1px solid #555;
+  margin-bottom: 1rem;
+  padding-bottom: 1rem;
 }
 
-.filter, .search{
-  border-bottom: 1px solid #555 ;
-  margin-bottom: 20px;
-  padding-bottom: 20px;
-
-}
-.filter-options{
+.filter-options {
   display: flex;
-   justify-content: space-between;
-   gap: 3rem;
-
+  justify-content: space-between;
+  gap: 3rem;
 }
-.filter-options div{
+
+.filter-options div {
   flex: 1 1 0;
 }
